Migrate HttpUrlConnection.